Add the fmcad paper.

--- a/relational_verification_analysis/bibliography.bib
+++ b/relational_verification_analysis/bibliography.bib
@@ -58,3 +58,20 @@
 	pages = {362--375},
 	file = {Full Text PDF:/home/romi/Zotero/storage/M6KFWPYX/Antonopoulos et al. - 2017 - Decomposition instead of self-composition for prov.pdf:application/pdf},
 }
+
+
+
+
+@inproceedings{mordvinov_property_2019,
+	title = {Property {Directed} {Inference} of {Relational} {Invariants}},
+	doi = {10.23919/FMCAD.2019.8894274},
+	abstract = {Property Directed Reachability (PDR) is an efficient and scalable approach for solving systems of symbolic constraints, also known as Constrained Horn Clauses (CHC). In the case of non-linear CHCs, which may arise, e.g., from relational verification tasks, PDR aims to infer an inductive invariant for each uninterpreted predicate. However, in many practical cases, this reasoning is not successful, as invariants need to be discovered for groups of predicates, as opposed to individual predicates. We contribute a novel algorithm that identifies such groups automatically and complements the existing PDR technique. The key feature of the algorithm is that it does not require a possibly expensive synchronization transformation over the system of CHCs. We have implemented the algorithm on top of a state-of the-art CHC solver SPACER. Our experimental evaluation shows that for some CHC systems, on which existing solvers diverge, our tool is able to discover relational invariants.},
+	booktitle = {2019 {Formal} {Methods} in {Computer} {Aided} {Design} ({FMCAD})},
+	author = {Mordvinov, Dmitry and Fedyukovich, Grigory},
+	month = oct,
+	year = {2019},
+	note = {ISSN: 2642-732X},
+	keywords = {Cognition, Safety, Semantics, Software, Synchronization, Task analysis, Tools},
+	pages = {152--160},
+	file = {IEEE Xplore Full Text PDF:/home/romi/Zotero/storage/C7JY48ND/Mordvinov and Fedyukovich - 2019 - Property Directed Inference of Relational Invarian.pdf:application/pdf},
+}
