Add synchrony/symmetry paper in bibliograpy.

--- a/relational_verification_analysis/bibliography.bib
+++ b/relational_verification_analysis/bibliography.bib
@@ -75,3 +75,24 @@
 	pages = {152--160},
 	file = {IEEE Xplore Full Text PDF:/home/romi/Zotero/storage/C7JY48ND/Mordvinov and Fedyukovich - 2019 - Property Directed Inference of Relational Invarian.pdf:application/pdf},
 }
+
+
+
+
+@inproceedings{pick_exploiting_synchrony_symmetry_2018,
+	address = {Cham},
+	series = {Lecture {Notes} in {Computer} {Science}},
+	title = {Exploiting {Synchrony} and {Symmetry} in {Relational} {Verification}},
+	isbn = {978-3-319-96145-3},
+	doi = {10.1007/978-3-319-96145-3_9},
+	abstract = {Relational safety specifications describe multiple runs of the same program or relate the behaviors of multiple programs. Approaches to automatic relational verification often compose the programs and analyze the result for safety, but a naively composed program can lead to difficult verification problems. We propose to exploit relational specifications for simplifying the generated verification subtasks. First, we maximize opportunities for synchronizing code fragments. Second, we compute symmetries in the specifications to reveal and avoid redundant subtasks. We have implemented these enhancements in a prototype for verifying k-safety properties on Java programs. Our evaluation confirms that our approach leads to a consistent performance speedup on a range of benchmarks.},
+	language = {en},
+	booktitle = {Computer {Aided} {Verification}},
+	publisher = {Springer International Publishing},
+	author = {Pick, Lauren and Fedyukovich, Grigory and Gupta, Aarti},
+	editor = {Chockler, Hana and Weissenbacher, Georg},
+	year = {2018},
+	keywords = {Hoare Triples, Lockstep Execution, Related Verification, Related Veriﬁcation Problems (RVPs), Symmetry-breaking Predicates (SBPs)},
+	pages = {164--182},
+	file = {Springer Full Text PDF:/home/romi/Zotero/storage/NLB3A9FB/Pick et al. - 2018 - Exploiting Synchrony and Symmetry in Relational Ve.pdf:application/pdf},
+}
