Add the subpolyhedra paper.

--- a/abstract_interpretation_relational/bibliography.bib
+++ b/abstract_interpretation_relational/bibliography.bib
@@ -15,3 +15,23 @@
 	pages = {230--248},
 	file = {Springer Full Text PDF:/home/romi/Zotero/storage/SKQ9K3AH/Becchi and Zaffanella - 2018 - A Direct Encoding for NNC Polyhedra.pdf:application/pdf},
 }
+
+
+@inproceedings{laviron_subpolyhedra_2009,
+	address = {Berlin, Heidelberg},
+	series = {Lecture {Notes} in {Computer} {Science}},
+	title = {{SubPolyhedra}: {A} ({More}) {Scalable} {Approach} to {Infer} {Linear} {Inequalities}},
+	isbn = {978-3-540-93900-9},
+	shorttitle = {{SubPolyhedra}},
+	doi = {10.1007/978-3-540-93900-9_20},
+	abstract = {We introduce Subpolyhedra (SubPoly) a new numerical abstract domain to infer and propagate linear inequalities. Subpoly is as expressive as Polyhedra, but it drops some of the deductive power to achieve scalability. Subpoly is based on the insight that the reduced product of linear equalities and intervals produces powerful yet scalable analyses. Precision can be recovered using hints. Hints can be automatically generated or provided by the user in the form of annotations.We implemented Subpoly on the top of Clousot, a generic abstract interpreter for .Net. Clousot with Subpoly analyzes very large and complex code bases in few minutes. Subpoly can efficiently capture linear inequalities among hundreds of variables, a result well-beyond state-of-the-art implementations of Polyhedra.},
+	language = {en},
+	booktitle = {Verification, {Model} {Checking}, and {Abstract} {Interpretation}},
+	publisher = {Springer},
+	author = {Laviron, Vincent and Logozzo, Francesco},
+	editor = {Jones, Neil D. and Müller-Olm, Markus},
+	year = {2009},
+	keywords = {Abstract Interpretation, Abstract State, Linear Inequality, Program Variable, Slack Variable},
+	pages = {229--244},
+	file = {Springer Full Text PDF:/home/romi/Zotero/storage/FJV2N8E9/Laviron and Logozzo - 2009 - SubPolyhedra A (More) Scalable Approach to Infer .pdf:application/pdf},
+}
